<?xml version="1.0" encoding="UTF-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
             >

<LinearLayout
    android:id="@+id/layout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_weight="3"
                android:text="@string/baudrate"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/bb"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_marginRight="5dip"
                android:layout_marginEnd="@dimen/dp5"
                android:layout_height="wrap_content"
                android:inputType="number" />

      </LinearLayout>

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/layout1"
	    android:orientation="horizontal" >

            <Button
                android:id="@+id/cancle1"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancle"/>

            <Button

                android:id="@+id/ok1"
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/ok" />
 </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
